# qt-basic-practices

./: CButton.qml  CMakeLists.txt  GroupProperties.qml  Main.qml  Main.qml.autosave  PBCode.qml  QtGlobal.qml  main.cpp
signalslots/: connection.qml  costumProperty.qml  signalAndComponent.qml
